<resources>
    <string name="app_name">Movie Explorer</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="something_wrong">Something went Wrong</string>
    <string name="one_more">Press again to exit</string>
    <string name="detail_movie_header">Detail Movie</string>
    <string name="overview_section_header">📖 Overview</string>
    <string name="cast_section_header">🎭 Cast</string>
    <string name="similar_movies_section_header">🎬 Similar Movies</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="rating_star_content_description">Rating Star</string>
    <string name="release_date_icon_content_description">Release Date Icon</string>
    <string name="back_button_content_description">Back</string>
    <string name="favorite_button_content_description">Favorite</string>
    <string name="movie_explorer_title">🎬 Movie Explorer</string>
    <string name="discover_amazing_movies_subtitle">Discover amazing movies</string>
    <string name="search_movies_hint">🔍 Search movies…</string>
    <string name="trending_today_title">🔥 Trending Today</string>
    <string name="title_movie">🌟 Popular Movies</string>
    <string name="switch_button_text">Switch</string>
    <string name="retry_button_text">Retry</string>
</resources>